added styles.css, logos and photo

--- a/index.html
+++ b/index.html
@@ -17,44 +17,43 @@
     <link rel="stylesheet" href="css/webslides.css" />
     <title>pedrotrigomiranda</title>
   </head>
+
   <body>
     <main role="main">
       <article id="webslides" class="vertical">
         <!-- Slide 1 -->
         <section>
           <header>
-            <div id="header-info" class="wrap zooming">
+            <div id="header-info" class="wrap">
               <a href="#slide=2"><span class="alignleft">tech stack</span></a>
               <a href="#slide=3"><span class="alignright">porfolio</span></a>
             </div>
           </header>
-          <div class="aligncenter fadeIn slow">
-            <h1 class="text-symbols" style="font-size: 5rem;">
-              <strong style="font-size: 7rem; color: purple;">{</strong>
+
+          <div class="aligncenter fadeIn">
+            <h1 class="text-symbols" style="font-size: 4.5rem;">
+              <strong style="font-size: 6.5rem; color: purple;">{</strong>
               pedro trigo miranda
-              <strong style="font-size: 7rem; color: purple;">}</strong>
+              <strong style="font-size: 6.5rem; color: purple;">}</strong>
             </h1>
             <br />
             <p class="text-subtitle" style="font-size: 2.2rem;">
               Full Stack Software Developer
             </p>
-            <p></p>
           </div>
 
           <footer>
-            <div id="footer-info" class="wrap">
-              <p>
-                <a href="#slide=4"><span class="alignleft">links</span></a>
-                <a href="#slide=5"><span class="alignright">about</span></a>
-              </p>
+            <div id="footer-info" class="wrap" >
+                <a href="#slide=4" id="info-links"><span class="alignleft">links</span></a>
+                <a href="#slide=5" id="info-about"><span class="alignright">about.me</span></a>
             </div>
           </footer>
         </section>
 
-        <!-- Tech #2-->
+        <!-- Tech -->
         <section>
           <div class="wrap">
-            <h1><strong style="color: purple">// </strong> tech stack</h1>
+            <h1><strong style="color: purple">// </strong> <strong>tech stack</strong></h1>
 
             <h4>programming languages && frameworks</h4>
             <ul class="flexblock">
@@ -170,7 +169,7 @@
             <h1><strong style="color: purple">// </strong> links</h1>
 
             <h4>profile</h4>
-            <ul class="flexblock">
+            <ul class="flexblock" style="vertical-align: middle;">
               <li id="li-tech-stack">
                 <figure>
                   <a href="https://github.com/pedrotrigomiranda" target="_blank"><img src="/resources/github.png" alt="github" /></a>
@@ -193,17 +192,7 @@
               </li>
               <li id="li-tech-stack">
                 <figure>
-                  <img src="/resources/linkedin.png" alt="gmail" />
-                  <figcaption>
-                      <p>
-                        <code>mail</code>
-                      </p>
-                   </figcaption>
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/linkedin.png" alt="free code camp" />
+                  <a href="https://www.freecodecamp.org/pedrotrigomiranda" target="_blank"><img src="https://goo.gl/oQrQYo" width="92" height="64"></a>
                   <figcaption>
                       <p>
                         <code>freeCodeCamp</code>
@@ -214,14 +203,54 @@
             </ul>
 
             <h4>certificates</h4>
-
+            <ul class="flexblock" style="vertical-align: middle;">
+              <li id="li-tech-stack">
+                <figure>
+                  <a href="https://github.com/pedrotrigomiranda" target="_blank"><img src="/resources/github.png" alt="github" /></a>
+                  <figcaption>
+                      <p>
+                        <code>github</code>
+                      </p>
+                   </figcaption>
+                </figure>
+              </li>
         </section>
 
         <!-- About -->
         <section>
           <div class="wrap">
             <h1><strong style="color: purple">//</strong> about</h1>
-            <hr />
+            <div class="card-50 bg-white">
+                <figure>
+                    <img src="/resources/photo.png">
+                    <figcaption>
+                        <code>pedrotrigomiranda</code>
+                    </figcaption>
+                </figure>
+                <div class="flex-content">
+                    <h3>Pedro</h3>
+                    <p>Understanding the beauty of physics in this world as a mechanical engineer, my curiosity led me to dive in the digital world and become an ever-growing full-stack developer with left-of-field ideas.
+                       <br><br>Music && Gaming && Synergy between people as constants in my life while(alive), make-up the sphere of consciousness and knowledge that I value and look forward to share with the world.
+                    <ul>
+                        <li>
+                            <strong class="text-label">From</strong>
+                            Porto, Portugal
+                        </li>
+                        <li>
+                            <strong class="text-label">Education</strong>
+                            Full Stack Developer @ &lt;Academia de C&oacute;digo_&gt;<br>
+                            <strong class="text-label"></strong>
+                            &&<br>
+                            <strong class="text-label"></strong>
+                            Mechanical Engineer @ FEUP
+                        </li>
+                        <li>
+                            <strong class="text-label">E-Mail</strong>
+                            pedrotrigomiranda@gmail.com
+                        </li>
+                    </ul>
+                </div>
+            </div>
           </div>
         </section>
       </article>
