--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
         <section>
           <header>
             <div id="header-info" class="wrap">
-              <a href="#slide=2"><span class="alignleft">tech stack</span></a>
-              <a href="#slide=3"><span class="alignright">porfolio</span></a>
+              <a href="#slide=2"><span class="alignleft hvr-underline-from-center">tech stack</span></a>
+              <a href="#slide=3"><span class="alignright hvr-underline-from-center">porfolio</span></a>
             </div>
           </header>
 
           <div class="aligncenter fadeIn">
-            <h1 class="text-symbols" style="font-size: 4.5rem;">
-              <strong style="font-size: 6.5rem; color: purple;">{</strong>
+            <h1 id="name" class="text-symbols hvr-back-pulse">
+              <a id="curly-brace">{</a>
               pedro trigo miranda
-              <strong style="font-size: 6.5rem; color: purple;">}</strong>
+              <a id="curly-brace">}</a>
             </h1>
             <br />
-            <p class="text-subtitle" style="font-size: 2.2rem;">
+            <p id="subtitle" class="text-subtitle">
               Full Stack Software Developer
             </p>
           </div>
 
           <footer>
             <div id="footer-info" class="wrap" >
-                <a href="#slide=4" id="info-links"><span class="alignleft">links</span></a>
-                <a href="#slide=5" id="info-about"><span class="alignright">about.me</span></a>
+                <a href="#slide=4" id="info-links"><span class="alignleft hvr-underline-from-center">links</span></a>
+                <a href="#slide=5" id="info-about"><span class="alignright hvr-underline-from-center">about.me</span></a>
             </div>
           </footer>
         </section>
@@ -53,67 +53,89 @@
         <!-- Tech -->
         <section>
           <div class="wrap">
-            <h1><strong style="color: purple">// </strong> <strong>tech stack</strong></h1>
+            <h1 id="slide-title"><a id="slash">// </a>tech stack</h1><br>
 
-            <h4>programming languages && frameworks</h4>
-            <ul class="flexblock">
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/java.svg" alt="java" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/javascript.svg" alt="javascript" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/nodejs.svg" alt="node" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/spring.svg" alt="spring" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/react.svg" alt="react" />
-                </figure>
-              </li>
-            </ul>
+            <div id="tech-stack-row">
+              <h4 id="slide-subtitle">programming languages && frameworks</h4>
+                <ul id="logo-container">
+                  <li id="logo">
+                    <div id="logo-item">
+                      <img src="/resources/java.svg" alt="java" />
+                      <p><code>java</code></p>
+                   </div>
+                  </li>
+                  <li id="logo">
+                    <div class="logo-item">
+                      <img src="/resources/javascript.svg" alt="javascript" />
+                      <p><code>javascript</code></p>
+                    </div>
+                  </li>
+                  </li>
+                  <li id="logo">
+                    <div class="logo-item">
+                      <img src="/resources/nodejs.svg" alt="node" />
+                      <p><code>node</code></p>
+                    </div>
+                  </li>
+                  </li>
+                  <li id="html-js-css">
+                    <div class="logo-item">
+                      <img src="/resources/html-js-css.svg" alt="HTML CSS javascript" />
+                      <p><code>HTML javascript CSS</code></p>
+                    </div>
+                  </li>
+                </ul>
+            </div>
 
-            <h4>databases && utils</h4>
-            <ul class="flexblock">
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/mongodb.svg" alt="mongodb" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/postgres.svg" alt="postgres" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/mysql.svg" alt="mysql" />
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <img src="/resources/docker.svg" alt="docker" />
-                </figure>
-              </li>
-            </ul>
+            <div id="tech-stack-row-2">
+              <h4 id="slide-subtitle">databases && utils</h4>
+                <ul id="logo-container">
+                  <li id="logo">
+                    <div id="logo-item">
+                      <img src="/resources/mongodb.svg" alt="mongodb" />
+                      <p><code>mongodb</code></p>
+                   </div>
+                  </li>
+                  <li id="logo">
+                    <div class="logo-item">
+                      <img src="/resources/postgres.svg" alt="postgres" />
+                      <p><code>postgres</code></p>
+                    </div>
+                  </li>
+                  </li>
+                  <li id="logo">
+                    <div class="logo-item">
+                      <img src="/resources/mysql.svg" alt="mysql" />
+                      <p><code>mysql</code></p>
+                    </div>
+                  </li>
+                  </li>
+                  <li id="logo-spring">
+                    <div class="logo-item">
+                      <img src="/resources/spring.svg" alt="spring" />
+                      <p><code>spring</code></p>
+                    </div>
+                  </li>
+                  <li id="logo">
+                    <div class="logo-item">
+                      <img src="/resources/docker.svg" alt="docker" />
+                      <p><code>docker</code></p>
+                    </div>
+                  </li>
+                </ul>
+            </div>
+
+            <div id="footer-home" class="wrap" >
+              <a href="#slide=1" id="home"><span class="alignright">@pedrotrigomiranda</span></a>
+            </div>
+
           </div>
         </section>
 
         <!-- Slide 3 Projects -->
         <section>
           <div class="wrap">
-            <h1><strong style="color: purple">// </strong>projects</h1>
+            <h1 id="slide-title"><a id="slash">// </a>projects</h1>
             <hr />
             <ul class="flexblock gallery">
               <li>
@@ -166,7 +188,7 @@
         <!-- Links -->
         <section>
           <div class="wrap">
-            <h1><strong style="color: purple">// </strong> links</h1>
+            <h1 id="slide-title"><a id="slash">// </a>links</h1>
 
             <h4>profile</h4>
             <ul class="flexblock" style="vertical-align: middle;">
@@ -219,7 +241,7 @@
         <!-- About -->
         <section>
           <div class="wrap">
-            <h1><strong style="color: purple">//</strong> about</h1>
+            <h1 id="slide-title"><a id="slash">//</a> about.me</h1>
             <div class="card-50 bg-white">
                 <figure>
                     <img src="/resources/photo.png">
@@ -227,8 +249,7 @@
                         <code>pedrotrigomiranda</code>
                     </figcaption>
                 </figure>
-                <div class="flex-content">
-                    <h3>Pedro</h3>
+                <div id="about-container" class="flex-content">
                     <p>Understanding the beauty of physics in this world as a mechanical engineer, my curiosity led me to dive in the digital world and become an ever-growing full-stack developer with left-of-field ideas.
                        <br><br>Music && Gaming && Synergy between people as constants in my life while(alive), make-up the sphere of consciousness and knowledge that I value and look forward to share with the world.
                     <ul>
