added missing logos and css animations

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
       media="all"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/webslides.css" />
     <title>pedrotrigomiranda</title>
@@ -25,15 +26,23 @@
         <section>
           <header>
             <div id="header-info" class="wrap">
-              <a href="#slide=2"><span class="alignleft hvr-underline-from-center">tech stack</span></a>
-              <a href="#slide=3"><span class="alignright hvr-underline-from-center">porfolio</span></a>
+              <a href="#slide=2"
+                ><span class="alignleft hvr-underline-from-center"
+                  >tech stack</span
+                ></a
+              >
+              <a href="#slide=3"
+                ><span class="alignright hvr-underline-from-center"
+                  >porfolio</span
+                ></a
+              >
             </div>
           </header>
 
           <div class="aligncenter fadeIn">
-            <h1 id="name" class="text-symbols hvr-back-pulse">
+            <h1 class="home-title">
               <a id="curly-brace">{</a>
-              pedro trigo miranda
+              <span id="name">&nbsp;&nbsp;pedro trigo miranda&nbsp;&nbsp;</span>
               <a id="curly-brace">}</a>
             </h1>
             <br />
@@ -43,9 +52,17 @@
           </div>
 
           <footer>
-            <div id="footer-info" class="wrap" >
-                <a href="#slide=4" id="info-links"><span class="alignleft hvr-underline-from-center">links</span></a>
-                <a href="#slide=5" id="info-about"><span class="alignright hvr-underline-from-center">about.me</span></a>
+            <div id="footer-info" class="wrap">
+              <a href="#slide=4" id="info-links"
+                ><span class="alignleft hvr-underline-from-center"
+                  >links</span
+                ></a
+              >
+              <a href="#slide=5" id="info-about"
+                ><span class="alignright hvr-underline-from-center"
+                  >about.me</span
+                ></a
+              >
             </div>
           </footer>
         </section>
@@ -53,226 +70,260 @@
         <!-- Tech -->
         <section>
           <div class="wrap">
-            <h1 id="slide-title"><a id="slash">// </a>tech stack</h1><br>
+            <h1 id="slide-title">
+              <a id="slash"><sup>//</sup></a
+              >&nbsp;&nbsp;tech stack
+            </h1>
+            <br />
 
             <div id="tech-stack-row">
               <h4 id="slide-subtitle">programming languages && frameworks</h4>
-                <ul id="logo-container">
-                  <li id="logo">
-                    <div id="logo-item">
-                      <img src="/resources/java.svg" alt="java" />
-                      <p><code>java</code></p>
-                   </div>
-                  </li>
-                  <li id="logo">
-                    <div class="logo-item">
-                      <img src="/resources/javascript.svg" alt="javascript" />
-                      <p><code>javascript</code></p>
-                    </div>
-                  </li>
-                  </li>
-                  <li id="logo">
-                    <div class="logo-item">
-                      <img src="/resources/nodejs.svg" alt="node" />
-                      <p><code>node</code></p>
-                    </div>
-                  </li>
-                  </li>
-                  <li id="html-js-css">
-                    <div class="logo-item">
-                      <img src="/resources/html-js-css.svg" alt="HTML CSS javascript" />
-                      <p><code>HTML javascript CSS</code></p>
-                    </div>
-                  </li>
-                </ul>
+              <ul id="logo-container">
+                <li id="logo">
+                  <div id="logo-item">
+                    <img src="/resources/java.svg" alt="java" />
+                    <p><code>java</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/js.svg" alt="javascript" />
+                    <p><code>javascript</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/html5.svg" alt="html" />
+                    <p><code>HTML</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/css3.svg" alt="css" />
+                    <p><code>CSS</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/nodejs.svg" alt="node" />
+                    <p><code>node</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/react.svg" alt="react" />
+                    <p><code>react</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/spring.svg" alt="spring" />
+                    <p><code>spring</code></p>
+                  </div>
+                </li>
+              </ul>
             </div>
 
             <div id="tech-stack-row-2">
               <h4 id="slide-subtitle">databases && utils</h4>
-                <ul id="logo-container">
-                  <li id="logo">
-                    <div id="logo-item">
-                      <img src="/resources/mongodb.svg" alt="mongodb" />
-                      <p><code>mongodb</code></p>
-                   </div>
-                  </li>
-                  <li id="logo">
-                    <div class="logo-item">
-                      <img src="/resources/postgres.svg" alt="postgres" />
-                      <p><code>postgres</code></p>
-                    </div>
-                  </li>
-                  </li>
-                  <li id="logo">
-                    <div class="logo-item">
-                      <img src="/resources/mysql.svg" alt="mysql" />
-                      <p><code>mysql</code></p>
-                    </div>
-                  </li>
-                  </li>
-                  <li id="logo-spring">
-                    <div class="logo-item">
-                      <img src="/resources/spring.svg" alt="spring" />
-                      <p><code>spring</code></p>
-                    </div>
-                  </li>
-                  <li id="logo">
-                    <div class="logo-item">
-                      <img src="/resources/docker.svg" alt="docker" />
-                      <p><code>docker</code></p>
-                    </div>
-                  </li>
-                </ul>
+              <ul id="logo-container">
+                <li id="logo">
+                  <div id="logo-item">
+                    <img src="/resources/mongodb.svg" alt="mongodb" />
+                    <p><code>mongodb</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/postgres.svg" alt="postgres" />
+                    <p><code>postgres</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/mysql.svg" alt="mysql" />
+                    <p><code>mysql</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/docker.svg" alt="docker" />
+                    <p><code>docker</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/maven.svg" alt="maven" />
+                    <p><code>maven</code></p>
+                  </div>
+                </li>
+              </ul>
             </div>
-
-            <div id="footer-home" class="wrap" >
-              <a href="#slide=1" id="home"><span class="alignright">@pedrotrigomiranda</span></a>
-            </div>
-
           </div>
+          <footer>
+            <div id="footer-home" class="wrap">
+              <a href="#slide=1" id="home"
+                ><span class="alignright">@pedrotrigomiranda</span></a
+              >
+            </div>
+          </footer>
         </section>
 
         <!-- Slide 3 Projects -->
         <section>
           <div class="wrap">
-            <h1 id="slide-title"><a id="slash">// </a>projects</h1>
+            <h1 id="slide-title">
+              <a id="slash"><sup>//</sup></a
+              >&nbsp;&nbsp;projects
+            </h1>
             <hr />
-            <ul class="flexblock gallery">
-              <li>
-                <a href="#" title="Project 1">
-                  <figure>
-                    <img src="/resources/screenshot.png" alt="Project1" />
-                    <figcaption>
-                      <h2>expense tracker</h2>
-                    </figcaption>
-                  </figure>
-                </a>
-              </li>
-              <li>
-                <a href="#" title="Project 1">
-                  <figure>
-                    <img
-                      src="/resources/screenshot-programming-quotes.png"
-                      alt="Project1"
-                    />
-                    <figcaption>
-                      <h2>programming quotes</h2>
-                    </figcaption>
-                  </figure>
-                </a>
-              </li>
-              <li>
-                <a href="#" title="Project 1">
-                  <figure>
-                    <img src="/resources/screenshot.png" alt="Project1" />
-                    <figcaption>
-                      <h2>space-x api</h2>
-                    </figcaption>
-                  </figure>
-                </a>
-              </li>
-              <li>
-                <a href="#" title="Project 1">
-                  <figure>
-                    <img src="/resources/screenshot.png" alt="Project1" />
-                    <figcaption>
-                      <h2>url-shortner</h2>
-                    </figcaption>
-                  </figure>
-                </a>
-              </li>
-            </ul>
+            <div id="projects-container" class="grid">
+              <figure class="effect-sarah">
+                <img
+                  src="/resources/screenshot-expense-tracker.png"
+                  alt="Project1"
+                />
+                <figcaption>
+                  <h2>Income && Expense Tracker</h2>
+                  <p>Mongodb, Express, React, Node.js</p>
+                </figcaption>
+              </figure>
+
+              <figure class="effect-sarah">
+                <img
+                  src="/resources/screenshot-programming-quotes.png"
+                  alt="Project1"
+                />
+                <figcaption>
+                  <h2>Programming Quotes</h2>
+                  <p>Mongodb, Express, React, Node.js</p>
+                </figcaption>
+              </figure>
+
+              <figure class="effect-sarah">
+                <img src="/resources/screenshot.png" alt="Project1" />
+                <figcaption>
+                  <h2>Animated Counter</h2>
+                  <p>Mongodb, Express, React, Node.js</p>
+                </figcaption>
+              </figure>
+
+              <figure class="effect-sarah">
+                <img
+                  src="/resources/screenshot-expense-tracker.png"
+                  alt="Project1"
+                />
+                <figcaption>
+                  <h2>Income && Expense Tracker</h2>
+                  <p>Mongodb, Express, React, Node.js</p>
+                </figcaption>
+              </figure>
+            </div>
           </div>
+          <footer>
+            <div id="footer-home" class="wrap">
+              <a href="#slide=1" id="home"
+                ><span class="alignright">@pedrotrigomiranda</span></a
+              >
+            </div>
+          </footer>
         </section>
 
         <!-- Links -->
         <section>
           <div class="wrap">
-            <h1 id="slide-title"><a id="slash">// </a>links</h1>
+            <h1 id="slide-title">
+              <a id="slash"><sup>//</sup></a
+              >&nbsp;&nbsp;links
+            </h1>
 
-            <h4>profile</h4>
-            <ul class="flexblock" style="vertical-align: middle;">
-              <li id="li-tech-stack">
-                <figure>
-                  <a href="https://github.com/pedrotrigomiranda" target="_blank"><img src="/resources/github.png" alt="github" /></a>
-                  <figcaption>
-                      <p>
-                        <code>github</code>
-                      </p>
-                   </figcaption>
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure style="align-items: center;">
-                  <a href="https://www.linkedin.com/in/pedrotrigomiranda/" target="_blank"><img src="/resources/linkedin.png" alt="linkedin" /></a>
-                  <figcaption>
-                      <p>
-                        <code>linkedin</code>
-                      </p>
-                   </figcaption>
-                </figure>
-              </li>
-              <li id="li-tech-stack">
-                <figure>
-                  <a href="https://www.freecodecamp.org/pedrotrigomiranda" target="_blank"><img src="https://goo.gl/oQrQYo" width="92" height="64"></a>
-                  <figcaption>
-                      <p>
-                        <code>freeCodeCamp</code>
-                      </p>
-                   </figcaption>
-                </figure>
-              </li>
-            </ul>
+            <div id="tech-stack-row">
+              <h4 id="slide-subtitle">profile</h4>
+              <ul id="logo-container">
+                <li id="logo">
+                  <div id="logo-item">
+                    <img src="/resources/github.png" alt="github" />
+                    <p><code>github</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/linkedin.png" alt="linkedin" />
+                    <p><code>linkedin</code></p>
+                  </div>
+                </li>
+                <li id="logo">
+                  <div class="logo-item">
+                    <img src="/resources/github.png" alt="freeCodeCamp" />
+                    <p><code>freeCodeCamp</code></p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
 
-            <h4>certificates</h4>
-            <ul class="flexblock" style="vertical-align: middle;">
-              <li id="li-tech-stack">
-                <figure>
-                  <a href="https://github.com/pedrotrigomiranda" target="_blank"><img src="/resources/github.png" alt="github" /></a>
-                  <figcaption>
-                      <p>
-                        <code>github</code>
-                      </p>
-                   </figcaption>
-                </figure>
-              </li>
+          <footer>
+            <div id="footer-home" class="wrap">
+              <a href="#slide=1" id="home"
+                ><span class="alignright">@pedrotrigomiranda</span></a
+              >
+            </div>
+          </footer>
         </section>
 
         <!-- About -->
         <section>
           <div class="wrap">
-            <h1 id="slide-title"><a id="slash">//</a> about.me</h1>
+            <h1 id="slide-title">
+              <a id="slash"><sup>//</sup></a
+              >&nbsp;&nbsp;about.me
+            </h1>
             <div class="card-50 bg-white">
-                <figure>
-                    <img src="/resources/photo.png">
-                    <figcaption>
-                        <code>pedrotrigomiranda</code>
-                    </figcaption>
-                </figure>
-                <div id="about-container" class="flex-content">
-                    <p>Understanding the beauty of physics in this world as a mechanical engineer, my curiosity led me to dive in the digital world and become an ever-growing full-stack developer with left-of-field ideas.
-                       <br><br>Music && Gaming && Synergy between people as constants in my life while(alive), make-up the sphere of consciousness and knowledge that I value and look forward to share with the world.
-                    <ul>
-                        <li>
-                            <strong class="text-label">From</strong>
-                            Porto, Portugal
-                        </li>
-                        <li>
-                            <strong class="text-label">Education</strong>
-                            Full Stack Developer @ &lt;Academia de C&oacute;digo_&gt;<br>
-                            <strong class="text-label"></strong>
-                            &&<br>
-                            <strong class="text-label"></strong>
-                            Mechanical Engineer @ FEUP
-                        </li>
-                        <li>
-                            <strong class="text-label">E-Mail</strong>
-                            pedrotrigomiranda@gmail.com
-                        </li>
-                    </ul>
-                </div>
+              <figure>
+                <img src="/resources/photo.png" />
+                <figcaption>
+                  <code>pedrotrigomiranda</code>
+                </figcaption>
+              </figure>
+              <div id="about-container" class="flex-content">
+                <p>
+                  Understanding the beauty of physics in this world as a
+                  mechanical engineer, my curiosity led me to dive in the
+                  digital world and become an ever-growing full-stack developer
+                  with left-of-field ideas. <br /><br />Music && Gaming &&
+                  Synergy between people as constants in my life while(alive),
+                  make-up the sphere of consciousness and knowledge that I value
+                  and look forward to share with the world.
+                </p>
+
+                <ul>
+                  <li>
+                    <strong class="text-label">From</strong>
+                    Porto, Portugal
+                  </li>
+                  <li>
+                    <strong class="text-label">Education</strong>
+                    Full Stack Developer @ &lt;Academia de C&oacute;digo_&gt;<br />
+                    <strong class="text-label"></strong>
+                    &&<br />
+                    <strong class="text-label"></strong>
+                    Mechanical Engineer @ FEUP
+                  </li>
+                  <li>
+                    <strong class="text-label">E-Mail</strong>
+                    pedrotrigomiranda@gmail.com
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
+          <footer>
+            <div id="footer-home" class="wrap">
+              <a href="#slide=1" id="home"
+                ><span class="alignright">@pedrotrigomiranda</span></a
+              >
+            </div>
+          </footer>
         </section>
       </article>
     </main>
