updated projects slide

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <a id="slash"><sup>//</sup></a
               >&nbsp;&nbsp;projects
             </h1>
-            <hr />
+            <hr style="margin: 20px" />
             <div id="projects-container" class="grid">
               <figure class="effect-sarah">
                 <img
@@ -184,8 +184,14 @@
                   alt="Project1"
                 />
                 <figcaption>
-                  <h2>Income && Expense Tracker</h2>
-                  <p>Mongodb, Express, React, Node.js</p>
+                  <p id="project-desc">
+                    <strong>Income && Expense Tracker</strong><br />
+                    Mongodb, Express, React, Node.js
+                  </p>
+                  <a
+                    href="https://github.com/pedrotrigomiranda/personal-income-expense-tracker"
+                    target="_blank"
+                  ></a>
                 </figcaption>
               </figure>
 
@@ -195,16 +201,28 @@
                   alt="Project1"
                 />
                 <figcaption>
-                  <h2>Programming Quotes</h2>
-                  <p>Mongodb, Express, React, Node.js</p>
+                  <p id="project-desc">
+                    <strong>Programming Quotes</strong><br />
+                    JavaScript, React, Axios, JSX
+                  </p>
+                  <a
+                    href="https://github.com/pedrotrigomiranda/personal-income-expense-tracker"
+                    target="_blank"
+                  ></a>
                 </figcaption>
               </figure>
 
               <figure class="effect-sarah">
                 <img src="/resources/screenshot.png" alt="Project1" />
                 <figcaption>
-                  <h2>Animated Counter</h2>
-                  <p>Mongodb, Express, React, Node.js</p>
+                  <p id="project-desc">
+                    <strong>Space-X Launches</strong><br />
+                    React, GraphQL, Apollo, Axios
+                  </p>
+                  <a
+                    href="https://github.com/pedrotrigomiranda/space-x-api"
+                    target="_blank"
+                  ></a>
                 </figcaption>
               </figure>
 
@@ -214,8 +232,42 @@
                   alt="Project1"
                 />
                 <figcaption>
-                  <h2>Income && Expense Tracker</h2>
-                  <p>Mongodb, Express, React, Node.js</p>
+                  <p id="project-desc">
+                    <strong>URL Shortener</strong><br />
+                    Mongodb, Express, Node.js
+                  </p>
+                  <a
+                    href="https://github.com/pedrotrigomiranda/programming-quotes"
+                    target="_blank"
+                  ></a>
+                </figcaption>
+              </figure>
+
+              <figure class="effect-sarah">
+                <img src="/resources/screenshot.png" alt="Project1" />
+                <figcaption>
+                  <p id="project-desc">
+                    <strong>Animated Counter</strong><br />
+                    JavaScript, HTML, CSS
+                  </p>
+                  <a
+                    href="https://github.com/pedrotrigomiranda/responsive-animated-counter"
+                    target="_blank"
+                  ></a>
+                </figcaption>
+              </figure>
+
+              <figure class="effect-sarah">
+                <img src="/resources/screenshot.png" alt="Project1" />
+                <figcaption>
+                  <p id="project-desc">
+                    <strong>Top Rock Albums API</strong><br />
+                    Java, Spring, JavaScript, React, Postgres, Docker
+                  </p>
+                  <a
+                    href="https://github.com/pedrotrigomiranda/top-rock-albums"
+                    target="_blank"
+                  ></a>
                 </figcaption>
               </figure>
             </div>
