added missing logos, css adjustments

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </footer>
         </section>
 
-        <!-- Tech -->
+        <!-- Slide 2 Tech -->
         <section>
           <div class="wrap">
             <h1 id="slide-title">
@@ -153,7 +153,7 @@
                 </li>
                 <li id="logo">
                   <div class="logo-item">
-                    <img src="/resources/maven.svg" alt="maven" />
+                    <img src="/resources/maven.png" alt="maven" />
                     <p><code>maven</code></p>
                   </div>
                 </li>
@@ -206,14 +206,14 @@
                     JavaScript, React, Axios, JSX
                   </p>
                   <a
-                    href="https://github.com/pedrotrigomiranda/personal-income-expense-tracker"
+                    href="https://github.com/pedrotrigomiranda/programming-quotes"
                     target="_blank"
                   ></a>
                 </figcaption>
               </figure>
 
               <figure class="effect-sarah">
-                <img src="/resources/screenshot.png" alt="Project1" />
+                <img src="/resources/screenshot-space-x.png" alt="Project1" />
                 <figcaption>
                   <p id="project-desc">
                     <strong>Space-X Launches</strong><br />
@@ -227,24 +227,24 @@
               </figure>
 
               <figure class="effect-sarah">
-                <img
-                  src="/resources/screenshot-expense-tracker.png"
-                  alt="Project1"
-                />
+                <img src="/resources/screenshot.png" alt="Project1" />
                 <figcaption>
                   <p id="project-desc">
                     <strong>URL Shortener</strong><br />
                     Mongodb, Express, Node.js
                   </p>
                   <a
-                    href="https://github.com/pedrotrigomiranda/programming-quotes"
+                    href="https://github.com/pedrotrigomiranda/url-shortener"
                     target="_blank"
                   ></a>
                 </figcaption>
               </figure>
 
               <figure class="effect-sarah">
-                <img src="/resources/screenshot.png" alt="Project1" />
+                <img
+                  src="/resources/screenshot-animated-counter.png"
+                  alt="Project1"
+                />
                 <figcaption>
                   <p id="project-desc">
                     <strong>Animated Counter</strong><br />
@@ -289,31 +289,32 @@
               >&nbsp;&nbsp;links
             </h1>
 
-            <div id="tech-stack-row">
-              <h4 id="slide-subtitle">profile</h4>
-              <ul id="logo-container">
-                <li id="logo">
-                  <div id="logo-item">
-                    <img src="/resources/github.png" alt="github" />
-                    <p><code>github</code></p>
-                  </div>
-                </li>
-                <li id="logo">
-                  <div class="logo-item">
-                    <img src="/resources/linkedin.png" alt="linkedin" />
-                    <p><code>linkedin</code></p>
-                  </div>
-                </li>
-                <li id="logo">
-                  <div class="logo-item">
-                    <img src="/resources/github.png" alt="freeCodeCamp" />
-                    <p><code>freeCodeCamp</code></p>
-                  </div>
-                </li>
-              </ul>
+            <hr style="margin: 20px" />
+            <div id="links-container">
+              <div id="link-logo">
+                <a href="https://github.com/pedrotrigomiranda" target="_blank"
+                  ><img src="/resources/github.png" alt="github"
+                /></a>
+              </div>
+
+              <div id="link-logo">
+                <a
+                  href="https://www.linkedin.com/in/pedrotrigomiranda"
+                  target="_blank"
+                  ><img src="/resources/linkedin.png" alt="linkedin"
+                /></a>
+              </div>
+
+              <div id="link-logo">
+                <a
+                  href="https://www.freecodecamp.org/pedrotrigomiranda"
+                  target="_blank"
+                >
+                  <img src="/resources/fcc.svg" alt="freeCodeCamp"
+                /></a>
+              </div>
             </div>
           </div>
-
           <footer>
             <div id="footer-home" class="wrap">
               <a href="#slide=1" id="home"
@@ -330,9 +331,10 @@
               <a id="slash"><sup>//</sup></a
               >&nbsp;&nbsp;about.me
             </h1>
-            <div class="card-50 bg-white">
-              <figure>
-                <img src="/resources/photo.png" />
+
+            <div id="about" class="card-50 bg-white">
+              <figure id="photo-container">
+                <img id="photo" src="/resources/photo.png" />
                 <figcaption>
                   <code>pedrotrigomiranda</code>
                 </figcaption>
