--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               >
               <a href="#slide=3"
                 ><span class="alignright hvr-underline-from-center"
-                  >porfolio</span
+                  >projects</span
                 ></a
               >
             </div>
