changed colors, removed figcaptions

--- a/index.html
+++ b/index.html
@@ -82,43 +82,37 @@
                 <li id="logo">
                   <div id="logo-item">
                     <img src="/resources/java.svg" alt="java" />
-                    <p><code>java</code></p>
+                    <!--<p><code>java</code></p>-->
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/js.svg" alt="javascript" />
-                    <p><code>javascript</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/html5.svg" alt="html" />
-                    <p><code>HTML</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/css3.svg" alt="css" />
-                    <p><code>CSS</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/nodejs.svg" alt="node" />
-                    <p><code>node</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/react.svg" alt="react" />
-                    <p><code>react</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/spring.svg" alt="spring" />
-                    <p><code>spring</code></p>
                   </div>
                 </li>
               </ul>
@@ -130,31 +124,26 @@
                 <li id="logo">
                   <div id="logo-item">
                     <img src="/resources/mongodb.svg" alt="mongodb" />
-                    <p><code>mongodb</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/postgres.svg" alt="postgres" />
-                    <p><code>postgres</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/mysql.svg" alt="mysql" />
-                    <p><code>mysql</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/docker.svg" alt="docker" />
-                    <p><code>docker</code></p>
                   </div>
                 </li>
                 <li id="logo">
                   <div class="logo-item">
                     <img src="/resources/maven.png" alt="maven" />
-                    <p><code>maven</code></p>
                   </div>
                 </li>
               </ul>
